# labelme2yolo

./: .gitignore  .pylintrc  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  labelme2yolo.py  pyproject.toml  requirements.txt
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: CI.yml  basic_build.yml  publish.yml  pylint.yml  python-package.yml
src/: coco.rs  coco_dataset.rs  config.rs  conversion.rs  dataset.rs  io.rs  labelme2coco.rs  labelme2yolo.rs  lib.rs  main.rs  streaming_json.rs  types.rs  utils.rs  yolo_dataset.rs
src/labelme2yolo/: __about__.py  __init__.py  __main__.py  l2y.py
src/labelme2yolo/cli/: __init__.py
tests/: unit_tests.rs
