[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[project]
name = "labelme2yolo"
description = "This script converts the JSON format output by LabelMe to the text format required by YOLO serirs."
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
  { name = "GreatV(Wang Xin)", email = "xinwang614@gmail.com" },
]
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]

dynamic = ["version"]

[tool.maturin]
bindings = "bin"

[project.urls]
Documentation = "https://github.com/greatv/labelme2yolo#readme"
Issues = "https://github.com/greatv/labelme2yolo/issues"
Source = "https://github.com/greatv/labelme2yolo"
